--- a/src/components/styles/app.css
+++ b/src/components/styles/app.css
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
 }
+
 body {
   font-family: "Segoe UI", sans-serif;
   line-height: 1.4;
@@ -32,20 +33,23 @@ body {
   width: 100%;
   padding: 8rem 20px 3rem;
 }
+
 .todos {
   max-width: 580px;
   margin: 0 auto;
 }
+
 .form-container {
   display: flex;
   border-radius: calc(0.1 * 100px);
-  box-shadow: 0px 4px 14px 0px rgba(70, 70, 70, 0.38);
+  box-shadow: 0 4px 14px 0 rgba(70, 70, 70, 0.38);
   justify-content: center;
   align-items: center;
   background: #fff;
   font-size: 1rem;
   margin-bottom: 50px;
 }
+
 .input-text {
   width: 85%;
   padding-right: 5px;
@@ -53,9 +57,11 @@ body {
   border-radius: calc(0.5 * 100px);
   font-size: 1rem;
 }
+
 .input-text::placeholder {
   color: #000;
 }
+
 .input-submit {
   background: transparent;
   color: #5b5b5b;
@@ -64,18 +70,21 @@ body {
   font-weight: 600;
   margin-right: 10px;
 }
+
 .input-text,
 .input-submit {
   height: 45px;
   outline: none;
   border: none;
 }
+
 .submit-warning {
   font-size: 13px;
   color: red;
   margin-top: 5px;
   display: block;
 }
+
 ul li {
   list-style: none;
 }
